# rathe-solana-template

./: Cargo.toml  justfile  readme.md
.github/: dependabot.yml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  lib.rs  processor.rs
program/tests/: integration.rs
