[package]
name = "program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
solana-program = "1.11.4"
thiserror = "1.0.32"

[lib]
crate-type=["cdylib", "lib"]

[dev-dependencies]
solana-program-test = "1.11.4"
